Añadir fecha al nombre en index.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <div class="header-container">
             <header class="wrapper clearfix">
-                <h1 class="title">DANIEL GARCIA MIGUEL</h1>
+                <h1 class="title">DANIEL GARCIA MIGUEL - 07/02/2024</h1>
                 <nav>
                     <ul>
                         <li><a href="#">nav ul li a</a></li>
